# trading-bot-cpp

./: .gitignore  API_INTEGRATION_GUIDE.md  CHANGELOG_API_INTEGRATION.md  CMakeLists.txt  DEVELOPMENT.md  QUICKSTART_API.md  README.md  TEST_RESULTS.md  TODO_IMPROVEMENT_PLAN.md  build.bat  config.json  run_example.py  test_api_data_fetcher.cpp  test_backtester.cpp  test_complete_system.cpp  test_csv.cpp  test_data.csv  test_ema_strategy.cpp  test_risk_manager.cpp  test_rsi_strategy.cpp  test_simple_trading_bot.cpp  test_sma_strategy.cpp  test_trading_bot.cpp  test_trading_bot_with_api.cpp
data/: sample_data.csv
examples/: README.md  config_aggressive_sma.json  config_conservative_sma.json  config_ema_swing.json  config_rsi_scalping.json
include/: trading_bot.h
include/backtester/: backtester.h
include/data/: api_data_fetcher.h  csv_parser.h
include/reporting/: report_generator.h
include/risk/: risk_manager.h
include/strategy/: strategy.h
include/utils/: logger.h
src/: CMakeLists.txt  main.cpp  trading_bot.cpp
src/backtester/: backtester.cpp
src/data/: api_data_fetcher.cpp  csv_parser.cpp
src/reporting/: report_generator.cpp
src/risk/: risk_manager.cpp
src/strategy/: ema_strategy.cpp  rsi_strategy.cpp  sma_crossover_strategy.cpp  strategy.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt
